--- a/index.html
+++ b/index.html
@@ -149,9 +149,48 @@
             </div>
         </section>
         <!-- Intro section end -->
-        <section>
 
+        <!-- Юридическая помощь section start -->
+        <section id="yuridik_help">
+            <div class="container">
+                <div class="yuridik_help">
+                    <h4>Юридическая помощь</h4>
+                    <p>Срочно понадобились услуги профессионального юриста или адвоката? Решение есть! Наша горячая юридическая линия – возможность оперативно, абсолютно бесплатно получить ответ на любой вопрос. Теперь не нужно записываться на офлайн-прием и тратить время на поездку и очереди перед кабинетом.</p>
+                    <p>Профессиональная помощь доступна круглосуточно – заявки обрабатываются в любое время дня и ночи. Обращаясь к специалистам «100 Юристов», вы можете рассчитывать на прозрачные, понятные условия сотрудничества.</p>
+                </div>
+
+                <div class="free_consul">
+                    <h4>Как получить бесплатную юридическую консультацию?</h4>
+                    <p>Задайте вопрос юристу бесплатно круглосуточно и без регистрации</p>
+                    <ul>
+                        <li>
+                            <i class='bx bx-phone-call'></i>
+                            <p>По телефону горячей линии</p>
+                            <h4>8 800 302-92-70</h4>
+                            <a href="#">Заказать звонок</a>
+                        </li>
+                        <li>
+                            <i class='bx bx-reply' ></i>
+                            <p>Задать свой вопрос на сайте и получить ответ онлайн</p>
+                            <a href="#">Заказать звонок</a>
+                        </li>
+                        <li>
+                            <i class='bx bx-message-dots' ></i>
+                            <p>Отправить запрос на обратный звонок юриста</p>
+                            <a href="#">Заказать звонок</a>
+                        </li>
+                        <li>
+                            <i class='bx bx-buildings' ></i>
+                            <p>Записаться на очную консультацию в офис</p>
+                            <a href="#">Заказать звонок</a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
         </section>
+        <!-- Юридическая помощь section end -->
+
     </main>
     <!-- Main section end -->
 
