desktop and response finish

--- a/index.html
+++ b/index.html
@@ -648,10 +648,198 @@
         </section>
         <!-- our clients seection end -->
 
-        
+        <!-- Portal section start -->
+        <section id="portal">
+            <div class="container">
+                <h5>Юристы портала</h5>
+                <div class="portal">
+                    <div class="portal-left">
+                        <ul>
+                            <li>
+                                <img class="imgform" src="./assets/images/Frame 943.png" alt="">
+                                <div>
+                                    <p>Гурьянова Вера Владимировна</p>
+                                    <p>Юрист, Самара</p>
+                                    <p>693 консультации </p>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./assets/images/Frame 943.png" alt="">
+                                <div>
+                                    <p>Кущева Марина Юрьевна</p>
+                                    <p>Юрист, Лебедянь</p>
+                                    <p>693 консультации </p>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./assets/images/Frame 943.png" alt="">
+                                <div>
+                                    <p>Тарасова Марина Сергеевна</p>
+                                    <p>Юрист, Москва</p>
+                                    <p>693 консультации </p>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./assets/images/Frame 943.png" alt="">
+                                <div>
+                                    <p>Приходин Николай Валерьевич</p>
+                                    <p>Юрист, Самара</p>
+                                    <p>693 консультации </p>
+                                </div>
+                            </li>
+                        </ul>
+
+                        <p class="yurist">Все наши юристы</p>
+                    </div>
+                    <div class="portal-right">
+                        <div class="online">
+                            <span>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none">
+                                    <circle cx="6" cy="6" r="6" fill="#12B76A"/>
+                                  </svg>
+                            </span>
+                            <p>Онлайн</p>
+                        </div>
+                        <h4>Задать вопрос юристу</h4>
+                        <p>Напишите ваш вопрос мы обязательно вам ответим</p>
+                        <form action="https://echo.htmlacademy.ru/" method="post">
+                            <label for="message" id="message">
+                                <input type="text" placeholder="Опишите вашу проблему..." required name="message">
+                            </label>
+                            <div>
+                                <label for="number" id="number_label">
+                                    <p>Номер телефона</p>
+                                    <input type="text" placeholder="+7 963 335-87-52" required id="number_label" name="number_label">
+                                </label>
+                                <label for="name" id="name_label">
+                                    <p>Ваше имя</p>
+                                    <input type="text" placeholder="Александр" required id="name_label" name="name_label">
+                                </label>
+                                <button>Отправить</button>
+                            </div>
+                        </form>
+                        <p>Отправляя вопрос, вы соглашаетесь с условиями Пользовательского соглашения</p>
+                        <ul>
+                            <li>
+                                <h3>48 юристов</h3>
+                                <p>сейчас онлайн</p>
+                            </li>
+                            <li>
+                                <h3>10 минут</h3>
+                                <p>средняя скорость ответа</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Portal section end -->
+
 
     </main>
     <!-- Main section end -->
+
+    <!-- Footer start -->
+    <footer>
+        <div class="container">
+          <h1 class="footer_title">Темы справочных материалов</h1>
+          <div>
+            <div class="footer_a">
+              <div class="footer_b">
+                <div>
+                  <div>
+                    <h1 class="footer_title1">A</h1>
+                    <p class="footer_item">Автокредит</p>
+                    <p class="footer_item">Авторское право</p>
+                    <p class="footer_item">Автоюрист</p>
+                    <p class="footer_item">Административное право</p>
+                  </div>
+                  <div>
+                    <h1 class="footer_title1">Ж</h1>
+                    <p class="footer_item">Жилищное право</p>
+                  </div>
+                  <div>
+                    <h1 class="footer_title1">М</h1>
+                    <p class="footer_item">Медицинское право</p>
+                    <p class="footer_item">Миграционное право</p>
+                  </div>
+                  <div>
+                    <h1 class="footer_title1">Т</h1>
+                    <p class="footer_item">Таможенное право</p>
+                    <p class="footer_item">Трудовое право</p>
+                  </div>
+                </div>
+                <div>
+                  <div>
+                    <h1 class="footer_title1">Б</h1>
+                    <p class="footer_item">Банкротство</p>
+                  </div>
+                  <div>
+                    <h1 class="footer_title1 footer_title2">З</h1>
+                    <p class="footer_item">Земельное право</p>
+                    <p class="footer_item">Защита прав потребителей</p>
+                  </div>
+                  <div>
+                    <h1 class="footer_title1">Н</h1>
+                    <p class="footer_item">Наследственное право</p>
+                    <p class="footer_item">Недвижимость</p>
+                  </div>
+                  <div>
+                    <h1 class="footer_title1">У</h1>
+                    <p class="footer_item">Уголовное право</p>
+                  </div>
+                </div>
+              </div>
+              <div class="footer_b">
+                <div>
+                  <div>
+                    <h1 class="footer_title1">С</h1>
+                    <p class="footer_item">Автокредит</p>
+                    <p class="footer_item">Авторское право</p>
+                    <p class="footer_item">Автоюрист</p>
+                    <p class="footer_item">Административное право</p>
+                  </div>
+                  <div>
+                    <h1 class="footer_title1">В</h1>
+                    <p class="footer_item">Жилищное право</p>
+                  </div>
+                  <div>
+                    <h1 class="footer_title1">И</h1>
+                    <p class="footer_item">Медицинское право</p>
+                    <p class="footer_item">Миграционное право</p>
+                  </div>
+                  <div>
+                    <h1 class="footer_title1">О</h1>
+                    <p class="footer_item">Таможенное право</p>
+                    <p class="footer_item">Трудовое право</p>
+                  </div>
+                </div>
+                <div>
+                  <div>
+                    <h1 class="footer_title1">Ю</h1>
+                    <p class="footer_item">Банкротство</p>
+                  </div>
+                  <div>
+                    <h1 class="footer_title1 footer_title2">Г</h1>
+                    <p class="footer_item">Земельное право</p>
+                    <p class="footer_item">Защита прав потребителей</p>
+                  </div>
+                  <div>
+                    <h1 class="footer_title1">К</h1>
+                    <p class="footer_item">Наследственное право</p>
+                    <p class="footer_item">Недвижимость</p>
+                  </div>
+                  <div>
+                    <h1 class="footer_title1">С</h1>
+                    <p class="footer_item">Уголовное право</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+    <!-- Fotter end -->
 
     <script src="./assets/js/utils.js"></script>
     <script src="./assets/js/index.js"></script>
